Refactor to add Lazy Loading using Proxies (6.11.1)

--- a/EFCore/Model/appsettings.json
+++ b/EFCore/Model/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "EFOpleidingen": "Server=.\\SQLExpress;Database=EFOpleidingen;Trusted_Connection=True;Encrypt=False"
+    "EFOpleidingen": "Server=.\\SQLExpress;Database=EFOpleidingen;Trusted_Connection=True;Encrypt=False;MultipleActiveResultSets=true"
   }
 }
