Change table docenten to have nullable field land, delete behavior set to SetNull. Remove all migrations and add migration initial_migration (change did not correctly make new migration) (9.2)

--- a/EFCore/Model/Model.csproj
+++ b/EFCore/Model/Model.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations - kopie\**" />
+    <EmbeddedResource Remove="Migrations - kopie\**" />
+    <None Remove="Migrations - kopie\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Migrations\" />
     <Folder Include="Services\" />
   </ItemGroup>
